# Valor

./: .env.example  .gitignore  .railwayignore  README.md  generator.js  generator.test.js  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: decay-cron.yml  keep-alive.yml
apps/api/: .env.example  Cargo.toml  Dockerfile  railway.toml
apps/api/migrations/: add_chain_tx_columns.sql  add_character_confirmed.sql  add_endless_rewards.sql  add_first_clear_bounties.sql  add_gdollar_ledger.sql  add_magic_identity.sql  add_prestige_and_tiers.sql  add_rank_up_rewards.sql  add_ranked_xp_lifetime.sql  add_repeating_decay.sql  add_season_payouts.sql  add_survival_rearms.sql  add_survival_runs.sql  fix_decimal_columns.sql  fix_xp_cap.sql  init.sql
apps/api/src/: main.rs  migrate.rs  utils.rs
apps/api/src/handlers/: admin.rs  auth.rs  battles.rs  consistency.rs  decay.rs  endless.rs  gauntlet.rs  identity.rs  items.rs  ledger.rs  missions.rs  mod.rs  players.rs  relay_proxy.rs  rewards.rs  seasons.rs  survival.rs  ws.rs
apps/api/src/models/: battle.rs  item.rs  mission.rs  mod.rs  player.rs
apps/api/src/services/: battle.rs  chain.rs  event_listener.rs  game_server.rs  mod.rs  rate_limiter.rs  rewards.rs
apps/web/: .env.example  .gitignore  .vercelignore  CREDITS.md  README.md  capacitor.config.ts  eslint.config.js  index.html  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
contracts/: .env.example  README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployEndlessPool.s.sol  RegisterFieldKit.s.sol  RegisterNewItems.s.sol  Setup.s.sol  UpgradeMarketplace.s.sol  UpgradeRewardPool.s.sol
contracts/src/: ValorGameRecord.sol  ValorItems.sol  ValorMarketplace.sol  ValorRewardPool.sol
contracts/test/: ValorItems.t.sol  (+2 more)
docs/: B0_ECONOMY_DEPLOY.md  C5_SHIP_GATE.md  CAPACITOR.md  DIFFICULTY_TIERS.md  GAME_DESIGN.md  ONCHAIN_TRANSACTIONS.md  PVP_NETCODE.md  RAILWAY_MIGRATION.md  gooddollar-whitelist-support.md
scripts/: bootstrap-db.mjs  bootstrap-neon.mjs  build_operator_glb.py  download_mixamo_anims.md  fbx_to_glb.py  generate_combat_anims.py  reconstruct-players.mjs  register-gooddollar.mjs
supabase/: run_all_pending.sql
(+411 files in other folders)
