[package]
name = "valor-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
ethers = { version = "2", features = ["rustls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.9"
hex = "0.4"
jsonwebtoken = "9"
dashmap = "6"
actix-ws = "0.3"
futures-util = "0.3"
# Outbound WS client for the WalletConnect relay proxy (see handlers/relay_proxy.rs).
# 0.20 is already in the tree via ethers; rustls-tls-webpki-roots gives wss:// support.
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
